src/main/java/md/utm/isa/faf/gen/md/utm/isa/faf/dsl/DslParser.java
// Generated from D:/EGOR/Projects/FinSL/FinSL/src/main/java/md/utm/isa/faf/dsl\DslParser.g4 by ANTLR 4.9.2
package md.utm.isa.faf.gen.md.utm.isa.faf.dsl;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DslParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
			new PredictionContextCache();
	public static final int
			ASSERT=1, BOOLEAN=2, BREAK=3, BYTE=4, CASE=5, CATCH=6, CLASS=7, CONST=8,
			CONTINUE=9, DEFAULT=10, DO=11, DOUBLE=12, ELSE=13, ENUM=14, EXTENDS=15,
			FOR=16, FUNCTION=17, IF=18, IS=19, IMPLEMENTS=20, IMPORT=21, INTERFACE=22,
			NEW=23, OF=24, ON=25, PRIVATE=26, PUBLIC=27, RETURN=28, SHORT=29, SUPER=30,
			SWITCH=31, THIS=32, THROW=33, THROWS=34, TRY=35, TYPE=36, WHILE=37, BALANCE_SHEET=38,
			INCOME_STATEMENT=39, ASSETS=40, LIABILITIES=41, EQUITY=42, CASH=43, EXPENSES=44,
			INVENTORY=45, ACCOUNTS=46, LONG_TERM=47, OTHERS=48, CAPITAL=49, RETAINED=50,
			SRL=51, INDIVIDUAL=52, LET=53, IDENTIFIER=54, DECIMAL_LITERAL=55, HEX_LITERAL=56,
			OCT_LITERAL=57, BINARY_LITERAL=58, FLOAT_LITERAL=59, HEX_FLOAT_LITERAL=60,
			BOOL_LITERAL=61, FLOAT_POINT=62, STRING_LITERAL=63, TEXT_BLOCK=64, NULL_LITERAL=65,
			LPAREN=66, RPAREN=67, LBRACE=68, RBRACE=69, LBRACK=70, RBRACK=71, SEMI=72,
			COMMA=73, DOT=74, ASSIGN=75, GT=76, LT=77, BANG=78, QUESTION=79, COLON=80,
			EQUAL=81, LE=82, GE=83, NOTEQUAL=84, AND=85, OR=86, INC=87, DEC=88, ADD=89,
			SUB=90, MUL=91, DIV=92, MOD=93, EXP=94, ADD_ASSIGN=95, SUB_ASSIGN=96,
			MUL_ASSIGN=97, DIV_ASSIGN=98, AND_ASSIGN=99, OR_ASSIGN=100, MOD_ASSIGN=101,
			EXP_ASSIGN=102, WS=103, COMMENT=104, LINE_COMMENT=105, UNEXPECTED_CHAR=106;
	public static final int
			RULE_program = 0, RULE_declaration = 1, RULE_classDecl = 2, RULE_funDecl = 3,
			RULE_varDecl = 4, RULE_finDecl = 5, RULE_balanceSheet = 6, RULE_incomeState = 7,
			RULE_bal_assets = 8, RULE_bal_liab = 9, RULE_bal_equity = 10, RULE_asset_ex = 11,
			RULE_liab_ex = 12, RULE_equity_ex = 13, RULE_statement = 14, RULE_exprStmt = 15,
			RULE_forStmt = 16, RULE_ifStmt = 17, RULE_returnStmt = 18, RULE_whileStmt = 19,
			RULE_block = 20, RULE_expression = 21, RULE_assignment = 22, RULE_logic_or = 23,
			RULE_logic_and = 24, RULE_equality = 25, RULE_comparison = 26, RULE_term = 27,
			RULE_factor = 28, RULE_unary = 29, RULE_call = 30, RULE_primary = 31,
			RULE_function = 32, RULE_parameters = 33, RULE_arguments = 34, RULE_bal_sheet_assets = 35,
			RULE_bal_sheet_liab = 36, RULE_bal_sheet_equity = 37, RULE_entities = 38;
	private static String[] makeRuleNames() {
		return new String[] {
				"program", "declaration", "classDecl", "funDecl", "varDecl", "finDecl",
				"balanceSheet", "incomeState", "bal_assets", "bal_liab", "bal_equity",
				"asset_ex", "liab_ex", "equity_ex", "statement", "exprStmt", "forStmt",
				"ifStmt", "returnStmt", "whileStmt", "block", "expression", "assignment",
				"logic_or", "logic_and", "equality", "comparison", "term", "factor",
				"unary", "call", "primary", "function", "parameters", "arguments", "bal_sheet_assets",
				"bal_sheet_liab", "bal_sheet_equity", "entities"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
				null, "'assert'", "'boolean'", "'break'", "'byte'", "'case'", "'catch'",
				"'class'", "'const'", "'continue'", "'default'", "'do'", "'double'",
				"'else'", "'enum'", "'extends'", "'for'", "'function'", "'if'", "'is'",
				"'implements'", "'import'", "'interface'", "'new'", "'of'", "'on'", "'private'",
				"'public'", "'return'", "'short'", "'super'", "'switch'", "'this'", "'throw'",
				"'throws'", "'try'", "'type'", "'while'", "'balance sheet'", "'income statement'",
				"'assets'", "'liabilities'", "'equity'", "'cash'", "'expenses'", "'inventory'",
				"'accounts'", "'long term'", "'others'", "'capital'", "'retained'", "'SRL'",
				"'Individual'", "'let'", null, null, null, null, null, null, null, null,
				null, null, null, "'null'", "'('", "')'", "'{'", "'}'", "'['", "']'",
				"';'", "','", "'.'", "'='", "'>'", "'<'", "'!'", "'?'", "':'", "'=='",
				"'<='", "'>='", "'!='", null, null, "'++'", "'--'", "'+'", "'-'", "'*'",
				"'/'", "'%'", "'**'", "'+='", "'-='", "'*='", "'/='", "'&='", "'|='",
				"'%='", "'**='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
				null, "ASSERT", "BOOLEAN", "BREAK", "BYTE", "CASE", "CATCH", "CLASS",
				"CONST", "CONTINUE", "DEFAULT", "DO", "DOUBLE", "ELSE", "ENUM", "EXTENDS",
				"FOR", "FUNCTION", "IF", "IS", "IMPLEMENTS", "IMPORT", "INTERFACE", "NEW",
				"OF", "ON", "PRIVATE", "PUBLIC", "RETURN", "SHORT", "SUPER", "SWITCH",
				"THIS", "THROW", "THROWS", "TRY", "TYPE", "WHILE", "BALANCE_SHEET", "INCOME_STATEMENT",
				"ASSETS", "LIABILITIES", "EQUITY", "CASH", "EXPENSES", "INVENTORY", "ACCOUNTS",
				"LONG_TERM", "OTHERS", "CAPITAL", "RETAINED", "SRL", "INDIVIDUAL", "LET",
				"IDENTIFIER", "DECIMAL_LITERAL", "HEX_LITERAL", "OCT_LITERAL", "BINARY_LITERAL",
				"FLOAT_LITERAL", "HEX_FLOAT_LITERAL", "BOOL_LITERAL", "FLOAT_POINT",
				"STRING_LITERAL", "TEXT_BLOCK", "NULL_LITERAL", "LPAREN", "RPAREN", "LBRACE",
				"RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", "ASSIGN", "GT",
				"LT", "BANG", "QUESTION", "COLON", "EQUAL", "LE", "GE", "NOTEQUAL", "AND",
				"OR", "INC", "DEC", "ADD", "SUB", "MUL", "DIV", "MOD", "EXP", "ADD_ASSIGN",
				"SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "AND_ASSIGN", "OR_ASSIGN",
				"MOD_ASSIGN", "EXP_ASSIGN", "WS", "COMMENT", "LINE_COMMENT", "UNEXPECTED_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DslParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DslParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DslParser.EOF, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DslParserListener ) ((DslParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DslParserListener ) ((DslParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DslParserVisitor ) return ((DslParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << FOR) | (1L << FUNCTION) | (1L << IF) | (1L << RETURN) | (1L << SUPER) | (1L << THIS) | (1L << WHILE) | (1L << BALANCE_SHEET) | (1L << INCOME_STATEMENT) | (1L << LET) | (1L << IDENTIFIER) | (1L << DECIMAL_LITERAL) | (1L << FLOAT_LITERAL) | (1L << BOOL_LITERAL) | (1L << STRING_LITERAL))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (NULL_LITERAL - 65)) | (1L << (LPAREN - 65)) | (1L << (LBRACE - 65)) | (1L << (BANG - 65)) | (1L << (SUB - 65)))) != 0)) {
					{
						{
							setState(78);
							declaration();
						}
					}
					setState(83);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(84);
				match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public ClassDeclContext classDecl() {
			return getRuleContext(ClassDeclContext.class,0);
		}
		public FunDeclContext funDecl() {
			return getRuleContext(FunDeclContext.class,0);
		}
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public FinDeclContext finDecl() {
			return getRuleContext(FinDeclContext.class,0);
		}
		public BalanceSheetContext balanceSheet() {
			return getRuleContext(BalanceSheetContext.class,0);
		}
		public IncomeStateContext incomeState() {
			return getRuleContext(IncomeStateContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DslParserListener ) ((DslParserListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DslParserListener ) ((DslParserListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DslParserVisitor ) return ((DslParserVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					enterOuterAlt(_localctx, 1);
				{
					setState(86);
					classDecl();
				}
				break;
				case 2:
					enterOuterAlt(_localctx, 2);
				{
					setState(87);
					funDecl();
				}
				break;
				case 3:
					enterOuterAlt(_localctx, 3);
				{
					setState(88);
					varDecl();
				}
				break;
				case 4:
					enterOuterAlt(_localctx, 4);
				{
					setState(89);
					statement();
				}
				break;
				case 5:
					enterOuterAlt(_localctx, 5);
				{
					setState(90);
					finDecl();
				}
				break;
				case 6:
					enterOuterAlt(_localctx, 6);
				{
					setState(91);
					balanceSheet();
				}
				break;
				case 7:
					enterOuterAlt(_localctx, 7);
				{
					setState(92);
					incomeState();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(DslParser.CLASS, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(DslParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(DslParser.IDENTIFIER, i);
		}
		public TerminalNode LBRACE() { return getToken(DslParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(DslParser.RBRACE, 0); }
		public TerminalNode LT() { return getToken(DslParser.LT, 0); }
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public ClassDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DslParserListener ) ((DslParserListener)listener).enterClassDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DslParserListener ) ((DslParserListener)listener).exitClassDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DslParserVisitor ) return ((DslParserVisitor<? extends T>)visitor).visitClassDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclContext classDecl() throws RecognitionException {
		ClassDeclContext _localctx = new ClassDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(95);
				match(CLASS);
				setState(96);
				match(IDENTIFIER);
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LT) {
					{
						setState(97);
						match(LT);
						setState(98);
						match(IDENTIFIER);
					}
				}

				setState(101);
				match(LBRACE);
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==IDENTIFIER) {
					{
						{
							setState(102);
							function();
						}
					}
					setState(107);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(108);
				match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunDeclContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(DslParser.FUNCTION, 0); }
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public FunDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DslParserListener ) ((DslParserListener)listener).enterFunDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DslParserListener ) ((DslParserListener)listener).exitFunDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DslParserVisitor ) return ((DslParserVisitor<? extends T>)visitor).visitFunDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunDeclContext funDecl() throws RecognitionException {
		FunDeclContext _localctx = new FunDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(110);
				match(FUNCTION);
				setState(111);
				function();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public TerminalNode LET() { return getToken(DslParser.LET, 0); }
		public TerminalNode IDENTIFIER() { return getToken(DslParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGN() { return getToken(DslParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode OF() { return getToken(DslParser.OF, 0); }
		public TerminalNode TYPE() { return getToken(DslParser.TYPE, 0); }
		public EntitiesContext entities() {
			return getRuleContext(EntitiesContext.class,0);
		}
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DslParserListener ) ((DslParserListener)listener).enterVarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DslParserListener ) ((DslParserListener)listener).exitVarDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DslParserVisitor ) return ((DslParserVisitor<? extends T>)visitor).visitVarDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(113);
				match(LET);
				setState(114);
				match(IDENTIFIER);
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
						setState(115);
						match(ASSIGN);
						setState(116);
						expression();
					}
				}

				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OF) {
					{
						setState(119);
						match(OF);
						setState(120);
						match(TYPE);
						setState(121);
						entities();
					}
				}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FinDeclContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(DslParser.IDENTIFIER, 0); }
		public TerminalNode OF() { return getToken(DslParser.OF, 0); }
		public EntitiesContext entities() {
			return getRuleContext(EntitiesContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(DslParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(DslParser.RBRACE, 0); }
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public FinDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_finDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DslParserListener ) ((DslParserListener)listener).enterFinDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DslParserListener ) ((DslParserListener)listener).exitFinDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DslParserVisitor ) return ((DslParserVisitor<? extends T>)visitor).visitFinDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FinDeclContext finDecl() throws RecognitionException {
		FinDeclContext _localctx = new FinDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_finDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(124);
				match(IDENTIFIER);
				setState(125);
				match(OF);
				setState(126);
				entities();
				setState(127);
				match(LBRACE);
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==IDENTIFIER) {
					{
						{
							setState(128);
							function();
						}
					}
					setState(133);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(134);
				match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BalanceSheetContext extends ParserRuleContext {
		public TerminalNode BALANCE_SHEET() { return getToken(DslParser.BALANCE_SHEET, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(DslParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(DslParser.IDENTIFIER, i);
		}
		public TerminalNode FOR() { return getToken(DslParser.FOR, 0); }
		public TerminalNode LBRACE() { return getToken(DslParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(DslParser.RBRACE, 0); }
		public List<Bal_equityContext> bal_equity() {
			return getRuleContexts(Bal_equityContext.class);
		}
		public Bal_equityContext bal_equity(int i) {
			return getRuleContext(Bal_equityContext.class,i);
		}
		public List<Bal_assetsContext> bal_assets() {
			return getRuleContexts(Bal_assetsContext.class);
		}
		public Bal_assetsContext bal_assets(int i) {
			return getRuleContext(Bal_assetsContext.class,i);
		}
		public List<Bal_liabContext> bal_liab() {
			return getRuleContexts(Bal_liabContext.class);
		}
		public Bal_liabContext bal_liab(int i) {
			return getRuleContext(Bal_liabContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public BalanceSheetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_balanceSheet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DslParserListener ) ((DslParserListener)listener).enterBalanceSheet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DslParserListener ) ((DslParserListener)listener).exitBalanceSheet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DslParserVisitor ) return ((DslParserVisitor<? extends T>)visitor).visitBalanceSheet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BalanceSheetContext balanceSheet() throws RecognitionException {
		BalanceSheetContext _localctx = new BalanceSheetContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_balanceSheet);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(136);
				match(BALANCE_SHEET);
				setState(137);
				match(IDENTIFIER);
				setState(138);
				match(FOR);
				setState(139);
				match(IDENTIFIER);
				setState(140);
				match(LBRACE);
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ASSETS) | (1L << LIABILITIES) | (1L << EQUITY))) != 0)) {
					{
						setState(144);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
							case EQUITY:
							{
								setState(141);
								bal_equity();
							}
							break;
							case ASSETS:
							{
								setState(142);
								bal_assets();
							}
							break;
							case LIABILITIES:
							{
								setState(143);
								bal_liab();
							}
							break;
							default:
								throw new NoViableAltException(this);
						}
					}
					setState(148);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(152);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
							{
								setState(149);
								statement();
							}
						}
					}
					setState(154);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==IDENTIFIER) {
					{
						{
							setState(155);
							function();
						}
					}
					setState(160);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(161);
				match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncomeStateContext extends ParserRuleContext {
		public TerminalNode INCOME_STATEMENT() { return getToken(DslParser.INCOME_STATEMENT, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(DslParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(DslParser.IDENTIFIER, i);
		}
		public TerminalNode FOR() { return getToken(DslParser.FOR, 0); }
		public TerminalNode LBRACE() { return getToken(DslParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(DslParser.RBRACE, 0); }
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public IncomeStateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_incomeState; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DslParserListener ) ((DslParserListener)listener).enterIncomeState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DslParserListener ) ((DslParserListener)listener).exitIncomeState(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DslParserVisitor ) return ((DslParserVisitor<? extends T>)visitor).visitIncomeState(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IncomeStateContext incomeState() throws RecognitionException {
		IncomeStateContext _localctx = new IncomeStateContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_incomeState);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(163);
				match(INCOME_STATEMENT);
				setState(164);
				match(IDENTIFIER);
				setState(165);
				match(FOR);
				setState(166);
				match(IDENTIFIER);
				setState(167);
				match(LBRACE);
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==IDENTIFIER) {
					{
						{
							setState(168);
							function();
						}
					}
					setState(173);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(174);
				match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
